zig/test_run_2.log
test-jit
+- run exe test_jit
   +- compile exe test_jit Debug native 1 errors
src/vm/jit_compiler.zig:201:83: error: expected type 'u32', found 'usize'
                    std.mem.writeInt(u32, self.code_buffer[patch_offset..][0..4], new_inst, .little);
                                                                                  ^~~~~~~~
src/vm/jit_compiler.zig:201:83: note: unsigned 32-bit int cannot represent all possible unsigned 64-bit values
/opt/homebrew/Cellar/zig/0.15.2/lib/zig/std/mem.zig:1939:99: note: parameter type declared here
pub inline fn writeInt(comptime T: type, buffer: *[@divExact(@typeInfo(T).int.bits, 8)]u8, value: T, endian: Endian) void {
                                                                                                  ^
referenced by:
    main: src/vm/tests/test_jit.zig:22:25
    callMain [inlined]: /opt/homebrew/Cellar/zig/0.15.2/lib/zig/std/start.zig:627:37
    callMainWithArgs [inlined]: /opt/homebrew/Cellar/zig/0.15.2/lib/zig/std/start.zig:587:20
    main: /opt/homebrew/Cellar/zig/0.15.2/lib/zig/std/start.zig:602:28
    1 reference(s) hidden; use '-freference-trace=5' to see all references
error: the following command failed with 1 compilation errors:
/opt/homebrew/Cellar/zig/0.15.2/bin/zig build-exe -ODebug --dep stencils --dep jit_compiler -Mroot=/Users/karan/zephyria/zig/src/vm/tests/test_jit.zig -Mstencils=.zig-cache/o/899eeb472fab41f4d594e8a37594df15/src/vm/generated/stencils.zig --dep stencils -Mjit_compiler=/Users/karan/zephyria/zig/src/vm/jit_compiler.zig -lc --cache-dir .zig-cache --global-cache-dir /Users/karan/.cache/zig --name test_jit --zig-lib-dir /opt/homebrew/Cellar/zig/0.15.2/lib/zig/ --listen=-

Build Summary: 4/7 steps succeeded; 1 failed
test-jit transitive failure
+- run exe test_jit transitive failure
   +- compile exe test_jit Debug native 1 errors

error: the following build command failed with exit code 1:
.zig-cache/o/26ef35733e12a97b045e2da944dce7ed/build /opt/homebrew/Cellar/zig/0.15.2/bin/zig /opt/homebrew/Cellar/zig/0.15.2/lib/zig /Users/karan/zephyria/zig .zig-cache /Users/karan/.cache/zig --seed 0x57236906 -Z7d173faaf1af1174 test-jit
